# bmson2pm

./: .gitignore  LICENSE  Makefile  README.md
backend/: config.example.toml  pyproject.toml
backend/app/: __init__.py  config.py  factory.py  main.py  models.py  storage.py
backend/app/adapters/: __init__.py  base.py  bms.py  bms_parser.py  bmson.py  bmson_normalize.py  notelist.py  pm3.py  pm3_crypto.py  pm3_cut_table.py  pm3_parser.py  pm3_reservations.py
backend/app/services/: bms_resources.py  pm3_export.py  pm3_ota_audit.py  pm3_resources.py  pm3_roms.py  pm3_ui.py  pm3_workspace.py  timing.py  validation.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  audio.test.ts  audio.ts  bga.test.ts  bga.ts  constants.ts  demo.ts  pm3MvRuffle.ts  pm3Reservations.ts  store.test.ts  store.ts  styles.css  timelineGrid.test.ts  timelineGrid.ts  timing.test.ts  timing.ts  types.ts  validation.test.ts  validation.ts
frontend/src/components/: BgaPreview.tsx  BmsImportDialog.test.tsx  BmsImportDialog.tsx  EditorToolbar.tsx  Header.test.tsx  Header.tsx  Inspector.tsx  KeySoundLibrary.test.tsx  KeySoundLibrary.tsx  Pm3ExportDialog.test.tsx  Pm3ExportDialog.tsx  Pm3MvPreview.test.tsx  Pm3MvPreview.tsx  Pm3OtaAuditView.test.tsx  Pm3OtaAuditView.tsx  Pm3ResearchDialog.test.tsx  Pm3ResearchDialog.tsx  Pm3VersionDialog.test.tsx  Pm3VersionDialog.tsx  Sidebar.tsx  Timeline.tsx  TrackContextMenu.test.tsx  TrackContextMenu.tsx  Transport.tsx
frontend/src/hooks/: useAudioFile.ts  useAutosave.ts  (+2 more)
